--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,4 @@ spring.datasource.password=Cw2II27VZ8a3uUdqmI763zNrkZusizGf
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 joinfaces.primefaces.theme=vela
+joinfaces.faces.project-stage=development
