--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 server.tomcat.accesslog.enabled=true
 
-#spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
 
 spring.datasource.url=jdbc:postgresql://dpg-cm7lii0cmk4c738ucftg-a.oregon-postgres.render.com:5432/db_exercise
