--- a/pom.xml
+++ b/pom.xml
@@ -60,7 +60,11 @@
 			<artifactId>spring-security-config</artifactId>
 			<version>6.1.4</version>
 		</dependency>
-
+		<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-web</artifactId>
+			<version>6.1.4</version>
+		</dependency>
 
 
 	</dependencies>
