--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 server.tomcat.accesslog.enabled=true
 
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
+#spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQL82Dialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.hibernate.show-sql=true
 
@@ -10,3 +10,7 @@ spring.datasource.password=Cw2II27VZ8a3uUdqmI763zNrkZusizGf
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 joinfaces.primefaces.theme=vela
+#spring.datasource.url=jdbc:mysql://localhost:3306/gatewaysdb
+#spring.datasource.username=root
+#spring.datasource.password=hermida.2015
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
