--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 server.tomcat.accesslog.enabled=true
 
-#spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQL82Dialect
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQL82Dialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.hibernate.show-sql=true
 
