--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,6 +9,7 @@ spring.datasource.username=saulo
 spring.datasource.password=Cw2II27VZ8a3uUdqmI763zNrkZusizGf
 spring.datasource.driver-class-name=org.postgresql.Driver
 
+joinfaces.faces.project-stage=production
 joinfaces.primefaces.theme=vela
 #spring.datasource.url=jdbc:mysql://localhost:3306/gatewaysdb
 #spring.datasource.username=root
