--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,8 @@ server.tomcat.accesslog.enabled=true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.hibernate.show-sql=true
 
-spring.datasource.url=jdbc:postgresql://dpg-cm7lii0cmk4c738ucftg-a.oregon-postgres.render.com:5432/db_exercise
+#spring.datasource.url=jdbc:postgresql://dpg-cm7lii0cmk4c738ucftg-a.oregon-postgres.render.com:5432/db_exercise
+spring.datasource.url=jdbc:postgresql://saulo:Cw2II27VZ8a3uUdqmI763zNrkZusizGf@dpg-cm7lii0cmk4c738ucftg-a/db_exercise
 spring.datasource.username=saulo
 spring.datasource.password=Cw2II27VZ8a3uUdqmI763zNrkZusizGf
 spring.datasource.driver-class-name=org.postgresql.Driver
