--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,18 +1,19 @@
 server.tomcat.accesslog.enabled=true
 
 #spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQL82Dialect
+
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.hibernate.show-sql=true
-
 #spring.datasource.url=jdbc:postgresql://dpg-cm7lii0cmk4c738ucftg-a.oregon-postgres.render.com:5432/db_exercise
-spring.datasource.url=jdbc:postgresql://saulo:Cw2II27VZ8a3uUdqmI763zNrkZusizGf@dpg-cm7lii0cmk4c738ucftg-a/db_exercise
+spring.datasource.url=jdbc:postgresql://saulo:Cw2II27VZ8a3uUdqmI763zNrkZusizGf@dpg-cm7lii0cmk4c738ucftg-a:5432/db_exercise
 spring.datasource.username=saulo
 spring.datasource.password=Cw2II27VZ8a3uUdqmI763zNrkZusizGf
 spring.datasource.driver-class-name=org.postgresql.Driver
 
-joinfaces.faces.project-stage=production
-joinfaces.primefaces.theme=vela
-#spring.datasource.url=jdbc:mysql://localhost:3306/gatewaysdb
+#joinfaces.faces.project-stage=production
+#joinfaces.primefaces.theme=vela
+#spring.datasource.url=jdbc:postgresql://localhost:3306/gatewaysdb
 #spring.datasource.username=root
 #spring.datasource.password=hermida.2015
 #spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
