--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,10 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/gatewaysdb  
-spring.datasource.username=root
-spring.datasource.password=hermida.2015
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+server.tomcat.accesslog.enabled=true
+
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=false
+spring.jpa.hibernate.show-sql=true
+
+spring.datasource.url=jdbc:postgresql://dpg-cm7lii0cmk4c738ucftg-a.oregon-postgres.render.com:5432/db_exercise
+spring.datasource.username=saulo
+spring.datasource.password=Cw2II27VZ8a3uUdqmI763zNrkZusizGf
+spring.datasource.driver-class-name=org.postgresql.Driver
